@@ -17,6 +17,7 @@ $HeadURL: https://phpmyadmin.svn.sourceforge.net/svnroot/phpmyadmin/trunk/phpMyA
 - bug #3026400 [PHP] ereg functions are deprecated
 - bug #3027557 [PHP] split() deprecated in PHP 5.3 (backport fixes from
 master, todo: update PHP excel?)
+- bug #3023507 [core] No result set display from stored procedure SELECT
 
 3.3.4.0 (2010-06-28)
 - bug #2996161 [import] properly escape import value
